--- a/style.css
+++ b/style.css
@@ -1,3 +1,19 @@
+@font-face {
+    font-family: Arvo;
+    font-style: normal;
+    font-weight: 400;
+    src: url(https://fonts.gstatic.com/s/arvo/v14/tDbD2oWUg0MKqScQ7Q.woff2) format("woff2");
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
+        U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215,
+        U+FEFF, U+FFFD;
+}
+
+* {
+        margin: 0px;
+        font-family: Arvo;
+        /* border: 1px solid gray; */
+    }
+
 body {
     display: flex;
     flex-direction: column;
@@ -14,13 +30,22 @@ header {
     font-size: 48px;
     font-weight: bolder;;
 }
+nav {
+    display: flex;
+    width: 80%;
+    justify-content: space-between;
+}
 
 .logo {
     color: #f9faf8;
-    font: size 24px;
-    display: flex;
-    flex-direction: column;
-    
+    font: size 48px;   
+}
+
+a {
+    color: #f9faf8;
+    text-decoration: none;
+    padding-left: 24px;
+
 }
 
 button {
@@ -29,15 +54,18 @@ button {
     border-radius: 8px;
 }
 
-a {
-    color: #f9faf8;
-    text-decoration: none;
-    margin-left: 16px;
+
+
+.sign-button {
+    margin-left: auto;
+}
+
+.about-button {
+    margin-right: 100px;
 }
 
 .first-line {
-    display: flex;
-    justify-content: flex-end;
+    
 }
 
 .image-heading {
